--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -22,6 +22,13 @@ jobs:
           default=$(echo $scheme_list | ruby -e "require 'json'; puts JSON.parse(STDIN.gets)['project']['targets'][0]")
           echo $default | cat >default
           echo Using default scheme: $default
+          
+      - name: ☕️ set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+            java-version: '17'
+            distribution: 'zulu'
+            cache: android/gradle
 
       - name: 🧱 Install Dependencies
         run: |
@@ -34,7 +41,7 @@ jobs:
         run: |
           make all
 
-      - name: ⬆️ Upload Build Artifact To OneDrive
+      - name: ⬆️ Upload Build Artifact
         env:
           scheme: ${{ 'default' }}
         run: |
