💚 update gradle config

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -28,7 +28,7 @@ jobs:
         with:
             java-version: '17'
             distribution: 'zulu'
-            cache: android/gradle
+            cache: gradle
 
       - name: 🧱 Install Dependencies
         run: |
