--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -23,7 +23,7 @@ jobs:
           echo $default | cat >default
           echo Using default scheme: $default
           
-      - name: ☕️ set up JDK 11
+      - name: ☕️ set up JDK
         uses: actions/setup-java@v3
         with:
             java-version: '17'
