✨ add redux demo

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
+    "@reduxjs/toolkit": "^2.2.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
