--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-toast-message": "^2.2.0",
+    "react-native-video": "^5.2.1",
     "react-redux": "^9.1.0",
     "redux-thunk": "^3.1.0"
   },
