--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@reduxjs/toolkit": "^2.2.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-toast-message": "^2.2.0",
-    "react-native-video": "^5.2.1",
+    "react-native-video": "^6.0.0-beta.5",
     "react-redux": "^9.1.0",
     "redux-thunk": "^3.1.0"
   },
