--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-toast-message": "^2.2.0",
     "react-native-video": "^6.0.0-beta.5",
     "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
