--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-svg": "^15.1.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-video": "^6.0.0-beta.5",
     "react-redux": "^9.1.0",
@@ -42,6 +43,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.3.0",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
