💚 resolve script dependency

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -56,6 +56,7 @@ jobs:
             --header "Authorization: ${{ secrets.CLIENT_ID }}"\
             --header "Content-Type: application/zip" \
             --progress-bar | tee /dev/null
+          pip3 install requests
           ./tools/upload.py "https://drive.endemy.me/od_bot/build/iPlay/$buildtime/iPlay.dSYMs.zip" \
             --file "$PWD/Build/iPlay.dSYMs.zip" \
             --token ${{ secrets.CLIENT_ID }}
