👷 update upload stage

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -59,4 +59,4 @@ jobs:
           pip3 install requests
           ./tools/upload.py --url "https://drive.endemy.me/od_bot/build/iPlay/$buildtime/iPlay.dSYMs.zip" \
             --file "$PWD/Build/iPlay.dSYMs.zip" \
-            --token ${{ secrets.CLIENT_ID }}
+            --token "${{ secrets.CLIENT_ID }}"
