--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-device-info": "^10.13.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
