💚 fix ci upload package

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -26,6 +26,12 @@ jobs:
             java-version: '17'
             distribution: 'zulu'
             cache: gradle
+        
+      - name: 🐍 set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
+          cache: 'pip' # caching pip dependencies
 
       - name:  Select Xcode version
         run: |
