--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-device-info": "^10.13.1",
+    "react-native-dialog": "^9.3.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "^4.9.0",
