--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-native-clipboard/clipboard": "^1.13.2",
     "@react-native-picker/picker": "^2.7.2",
     "@react-navigation/bottom-tabs": "^6.5.19",
@@ -23,6 +22,7 @@
     "react-native-device-info": "^10.13.1",
     "react-native-dialog": "^9.3.0",
     "react-native-fast-image": "^8.6.3",
+    "react-native-mmkv": "^2.12.2",
     "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
