--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
     "@reduxjs/toolkit": "^2.2.1",
+    "babel-plugin-dotenv-import": "^3.0.1",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.73.6",
