--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "windows": "react-native run-windows"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-clipboard/clipboard": "^1.13.2",
     "@react-native-picker/picker": "^2.7.2",
     "@react-navigation/bottom-tabs": "^6.5.19",
@@ -29,6 +31,7 @@
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^15.1.0",
     "react-native-toast-message": "^2.2.0",
+    "react-native-windows": "0.73.11",
     "react-redux": "^9.1.0",
     "recyclerlistview": "^4.2.0",
     "redux-persist": "^6.0.0",
@@ -50,6 +53,7 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-config": "^0.80.6",
     "prettier": "2.8.8",
     "react-native-svg-transformer": "^1.3.0",
     "react-test-renderer": "18.2.0",
