💚 update windows build

--- a/.github/workflows/windows-ci.yml
+++ b/.github/workflows/windows-ci.yml
@@ -57,6 +57,7 @@ jobs:
       run: |
         Compress-Archive -Path windows\x64\Release -DestinationPath iPlay.x64.zip    
         Compress-Archive -Path windows\ARM64\Release -DestinationPath iPlay.ARM64.zip    
+        Compress-Archive -Path windows -DestinationPath iPlay.all.zip    
       
     - name: ⬆️ Upload Build Artifact
       shell: powershell
@@ -73,4 +74,8 @@ jobs:
         Write-Host "Uploaded iPlay.ARM64.zip"
         python ./tools/upload.py --url "https://drive.endemy.me/od_bot/build/iPlay/$buildtime/iPlay.ARM64.zip" `
           --file "$PWD/iPlay.ARM64.zip" `
+          --token "${{ secrets.CLIENT_ID }}"
+        Write-Host "Uploaded iPlay.all.zip"
+        python ./tools/upload.py --url "https://drive.endemy.me/od_bot/build/iPlay/$buildtime/iPlay.all.zip" `
+          --file "$PWD/iPlay.all.zip" `
           --token "${{ secrets.CLIENT_ID }}"
