--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
+    "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.1",
     "babel-plugin-dotenv-import": "^3.0.1",
     "lodash": "^4.17.21",
@@ -28,7 +29,7 @@
     "react-native-mmkv": "^2.12.2",
     "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0",
+    "react-native-screens": "^3.30.1",
     "react-native-svg": "^15.1.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-windows": "0.73.11",
