--- a/windows/iPlayClient/iPlayClient.vcxproj.filters
+++ b/windows/iPlayClient/iPlayClient.vcxproj.filters
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="PropertySheet.props" />
+    <None Include="iPlayClient_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="readme.txt" />
