--- a/windows/iPlayClient/iPlayClient.vcxproj
+++ b/windows/iPlayClient/iPlayClient.vcxproj
@@ -80,7 +80,7 @@
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>x86|x64|arm64</AppxBundlePlatforms>
     <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
-    <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+    <AppxPackageSigningEnabled>False</AppxPackageSigningEnabled>
     <PackageCertificateThumbprint>7FF00DEE7DAE97C40671807AC3D67BCAC3D3732E</PackageCertificateThumbprint>
   </PropertyGroup>
   <ItemDefinitionGroup>
