--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "ios"]
-	path = ios
-	url = https://github.com/ourfor/iPlayX.ios
 [submodule "android"]
 	path = android
-	url = https://github.com/ourfor/iPlayX.android
+	url = git@github.com:ourfor/iPlayX.android
+[submodule "ios"]
+	path = ios
+	url = git@github.com:ourfor/iPlayX.ios
