💚 fix Android build

--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli-platform-android": "^13.6.6",
     "@react-native/babel-preset": "0.74.81",
     "@react-native/eslint-config": "0.74.81",
+    "@react-native/gradle-plugin": "^0.74.81",
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
     "@types/lodash": "^4.17.0",
