--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-mmkv": "^2.12.2",
     "react-native-picker-select": "^9.1.3",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.30.1",
     "react-native-svg": "^15.1.0",
     "react-native-toast-message": "^2.2.0",
@@ -43,6 +43,7 @@
     "@babel/runtime": "^7.20.0",
     "@react-native-community/cli-platform-android": "^13.6.6",
     "@react-native/babel-preset": "0.74.81",
+    "@react-native/codegen": "^0.74.81",
     "@react-native/eslint-config": "0.74.81",
     "@react-native/gradle-plugin": "^0.74.81",
     "@react-native/metro-config": "0.74.81",
@@ -56,6 +57,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "metro-config": "^0.80.6",
+    "metro-react-native-babel-transformer": "^0.77.0",
     "prettier": "2.8.8",
     "react-native-svg-transformer": "^1.3.0",
     "react-test-renderer": "18.2.0",
@@ -67,9 +69,6 @@
   "codegenConfig": {
     "name": "iPlayClient",
     "type": "modules",
-    "jsSrcsDir": "src",
-    "windows": {
-      "namespace": "top::ourfor::app::iPlayClient"
-    }
+    "jsSrcsDir": "src"
   }
 }
