--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -49,21 +49,21 @@ jobs:
           ls /Applications/
           sudo xcode-select --switch /Applications/Xcode_15.2.app
       
-      # - name: 🕸️ Cache node modules
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: node_modules
-      #     key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-node-
+      - name: 🕸️ Cache node modules
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
             
-      # - name: 🕸️ Cache CocoaPods
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: ios/Pods
-      #     key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-pods-
+      - name: 🕸️ Cache CocoaPods
+        uses: actions/cache@v2
+        with:
+          path: ios/Pods
+          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
 
       - name: 🧱 Install Dependencies
         run: |
@@ -77,6 +77,15 @@ jobs:
         run: |
           rm -rf ios/iPlayClient.xcworkspace/xcshareddata/swiftpm/Package.resolved
           make all
+
+      - name: ⬆️ Upload Build Artifact To GitHub
+        uses: actions/upload-artifact@v3
+        with:
+            name: artifact
+            path: |
+              build/*.apk
+              build/*.ipa
+        
 
       - name: ⬆️ Upload Build Artifact
         env:
