--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,4 +2,4 @@
 
 github: [ourfor]
 buy_me_a_coffee: ourfor
-#custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+custom: ['https://github.com/ourfor/iPlay/blob/main/doc/sponsor.md']
