--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -29,6 +29,7 @@ jobs:
       - name: 👀 Checkout
         uses: actions/checkout@v4
         with:
+          fetch-depth: 0
           submodules: true
           token: ${{ secrets.GH_PAT }}
           
