--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -36,7 +36,7 @@ jobs:
       - name: 🐧 set up Swift
         uses: swift-actions/setup-swift@v2
         with:
-          swift-version: 5.10
+          swift-version: "5.10.1"
       
       - name: ☕️ set up JDK
         uses: actions/setup-java@v3
