--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -81,7 +81,7 @@ jobs:
           scheme: ${{ 'default' }}
           DEVELOPER_DIR: /Applications/Xcode_15.4.app/Contents/Developer
         run: |
-          # exec &> build.log
+          exec &> build.log
           rm -rf ios/iPlayClient.xcworkspace/xcshareddata/swiftpm/Package.resolved
           make all
 
