--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -95,13 +95,13 @@ jobs:
             --file "$PWD/build.log" \
             --token "${{ secrets.CLIENT_ID }}"
 
-      - name: ✈️ Upload app to TestFlight
-        uses: apple-actions/upload-testflight-build@v1
-        with: 
-          app-path: build/iPlay.ipa
-          issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
-          api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
-          api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
+      # - name: ✈️ Upload app to TestFlight
+      #   uses: apple-actions/upload-testflight-build@v1
+      #   with: 
+      #     app-path: build/iPlay.ipa
+      #     issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
+      #     api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
+      #     api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
 
       - name: ⬆️ Upload Build Artifact To GitHub
         uses: actions/upload-artifact@v3
